Fri Sep 19 16:24:20 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * TAO_IDL/fe/idl.ll:
        * TAO_IDL/fe/lex.yy.cpp:

          Updated to not compare realpath if it's not found.
           
Thu Sep 18 22:45:39 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * TAO_IDL/fe/lex.yy.cpp:
        * TAO_IDL/fe/idl.ll:

          Made idl_parse_line_and_file() to compare the full path to verify
          two path are referring to the same file. This would correctly verify
          even one path is full path and the other is real path.

Thu Sep 18 18:36:39 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2936_Regression/bug2936.mpc:
        * tests/Bug_2936_Regression/run_test.pl:
          Changed the exe project to build the executable server. We
          first build an exe and lib with the same name which caused
          the vxtest mpc generator to issue a warning

Thu Sep 18 11:03:39 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * utils/nslist/Makefile.am:

          Regenerated.

Thu Sep 18 11:02:03 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Trader/Constraint_Nodes.cpp:

          Explicitly initialize base class in TAO_Literal_Constraint copy
          constructor.

Wed Sep 17 18:59:57 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_sunsoft.cpp (print):

          Changed signed long long case to be similar to unsigned
          long long, using ACE macros that expand to the correct
          thing whether native 64-bit integers are defined or not.
          This change enables code generation for signed long long
          literals (as the rhs of 'const long long' declarations)
          to be correct on all platforms. Thanks to Ittehad Shaikh
          <ishaikh@verivue.com> for reporting the Linux warning
          that uncovered this bug. Fixes [BUGID:3423].

Wed Sep 17 18:48:41 UTC 2008  Phil Mesnier  <mesnier_p@ociweb.com>
